--- a/panel/panel-frontend/src/assets/style/login-scoped.css
+++ b/panel/panel-frontend/src/assets/style/login-scoped.css
@@ -226,7 +226,7 @@ i.fa.fa-code {
 .login-app input[type="password"] {
   width: 81.2%;
   padding: 0.8em 1em 0.8em 2em;
-  margin: 0.5em 0 0.5em -1.5em;
+  margin: 0 0 0.5em -1.5em;
   color: #283440;
   font-size: 16px;
   outline: none;
